@@ -1,3 +1,8 @@
+Jan 1, 2001: Alex Burger <alex@fragit.net>
+-Now executes the file PreLaunch from the ~/.qf directory when launching a 
+ game for use with ICQ scripts etc.  Toggle on / off using Preferences / 
+ Appearance 
+
 Dec 28, 2000: Alex Burger <alex@fragit.net>
 -Modified game.c to query for protocol 48 Quake3 servers instead of the
  qstat default by using "-q3m,48"
